Add watchlist,summary, and more methods for creating real data Added Job for scheduling Update MarketDataService for different currencies Prepare for implementing Security